welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: type mismatch;
 found   : Array[Int]
 required: (Int, Int)
  trouveIle(num)
           ^island:15: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
  return (debut,fin)
         ^